clusters/workload01/flux-system/capacitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web        # or websecure if TLS
spec:
  ingressClassName: kommander-traefik
  rules:
    - host: capacitor.10.122.7.176.nip.io
      http:
        paths:
          - path: /capacitor
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: http
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /capacitor
#         pathType: Prefix
#         backend:
#           service:
#             name: capacitor
#             port:
#               name: http
